# LM-cancer-detection

./: .gitignore  Makefile  README.md  datasets.csv  defaults.yaml  experiments.yaml  manuscript.md  pyproject.toml  requirements.txt
.cursor/rules/: api-evolution.mdc  backward-compatibility.mdc  data-analysis-pipeline.mdc  (+4 more)
configs/: datasets.csv  pipeline.yaml
helpers/: figure1_uc_cap.py  figure2_hyenadna.py  grid_uc_cap_classifier.py  list_uc_cap_feature_outputs.py  table1_from_classifier.py  table2_uc_cap_from_classifier.py  table3_uc_cap.py  table3_uc_cap_from_classifier.py  table4_hyenadna.py  table5_hyenadna.py
hyenadna/: huggingface_wrapper.py  inference_example.py  standalone_hyenadna.py
manuscript/: appendix.md  manuscript.md  report.md  table1_from_classifier.py  table5_hyenadna.html
prompts/: manuscript_revision_1.md
report/: manuscript.md  table1_from_classifier.py
results/: cancer_diagnosis_results.txt  cancer_type_results.txt  uc_cap_cancer_diagnosis.md  uc_cap_cancer_type.md
scripts/: build_run_tensors.py  build_torch_dataset.py  build_uc_cap_sequence_cache.py  calculate_tetramer_frequencies.py  calculate_tetranucleotide_frequencies.py  count_tetramers.py  download_sra_data.py  explain_make_trace.py  fit_classifier.py  fit_tetramer_classifier.py  fit_tetranucleotide_classifier.py  fit_uc_cap_classifier.py  grid_uc_cap_classifier.py  grid_uc_cap_pipeline.py  grid_uc_cap_pipeline.sh  hyenadna_fasta_data.py  hyenadna_multitask.py  pipeline_emit_mk.py  run_uc_cap_pipeline.py  shared_splits.py  shared_utilities.py  train_hyenadna.py
(+70 files in other folders)
